Ajuste nas condições do level da chant of life Configurações do servidor

--- a/game/config/main/Debug.ini
+++ b/game/config/main/Debug.ini
@@ -5,7 +5,7 @@
 # These settings are for debugging servers ONLY. They are not meant for LIVE servers.
 
 # Default: False
-Debug = False
+Debug = True
 
 # Warning do not activate this in live server will cause stability issues
 # This will allow you to check how many packets server sent every x seconds
@@ -20,7 +20,7 @@ DebugPacketInterval = 5
 
 # Set true if you want to see player skill logs
 # Default : False
-DebugPlayersSkills = False
+DebugPlayersSkills = True
 
 # Set true if want to see players possible tries to dupe items
 # Default: False
@@ -39,10 +39,10 @@ DebugScriptsNotifies = False
 
 # Show skills while loading them.
 # Default: False
-DebugSkillParsing = False
+DebugSkillParsing = True
 
 # Default: False
-DebugSkillDuration = False
+DebugSkillDuration = True
 
 # This will log if a player lost a variable from character_quests table
 # Default: False
