--- a/game/config/main/General.ini
+++ b/game/config/main/General.ini
@@ -26,7 +26,7 @@ ServerListBrackets = False
 # Notes:
 #	Accepted Values: Normal, Relax, Test, NoLabel, Restricted, Event, Free
 # Default: Normal
-ServerListType = Normal
+ServerListType = Relax
 
 # Displays server minimum age to the server name on character selection.
 # Notes:
@@ -210,7 +210,7 @@ RestartOnDeadlock = False
 # Items on ground management.
 # Allow players to drop items on the ground.
 # Default: True
-AllowDiscardItem = True
+AllowDiscardItem = False
 
 # Delete dropped reward items from world after a specified amount of seconds. Disabled = 0.
 # Default: 600
