--- a/game/config/main/L2JMods.ini
+++ b/game/config/main/L2JMods.ini
@@ -131,7 +131,7 @@ OfflineDisconnectFinished = True
 # This option will enable core support for:
 # Mana Drug (item ID 726), using skill ID 10000.
 # Mana Potion (item ID 728), using skill ID 10001.
-EnableManaPotionSupport = True
+EnableManaPotionSupport = False
 
 
 # ---------------------------------------------------------------------------
