Alteracoes Drop,Feature,L2jModes, NPC

--- a/game/config/main/Drops.ini
+++ b/game/config/main/Drops.ini
@@ -49,4 +49,4 @@ RaidLootRightsCCSize = 45
 
 # Mobs/RB/GRB last attacker calc as max damager for drop owner. Official last attacker is owner
 # Default: False
-DropLastAttackerIsMaxDamager = False
+DropLastAttackerIsMaxDamager = True
