--- a/game/config/main/General.ini
+++ b/game/config/main/General.ini
@@ -88,7 +88,7 @@ GMShowAnnouncerName = True
 
 # Show the GM's name before an announcement made by him
 # example: "Nyaran: hi"
-GMShowCritAnnouncerName = False
+GMShowCritAnnouncerName = True
 
 # Give special skills for every GM
 # 7029,7041-7064,7088-7096,23238-23249 (Master's Blessing)
@@ -98,7 +98,7 @@ GMGiveSpecialSkills = False
 # Give special aura skills for every GM
 # 7029,23238-23249,23253-23296 (Master's Blessing)
 # Default: False
-GMGiveSpecialAuraSkills = False
+GMGiveSpecialAuraSkills = True
 
 
 # ---------------------------------------------------------------------------
@@ -210,7 +210,7 @@ RestartOnDeadlock = False
 # Items on ground management.
 # Allow players to drop items on the ground.
 # Default: True
-AllowDiscardItem = False
+AllowDiscardItem = True
 
 # Delete dropped reward items from world after a specified amount of seconds. Disabled = 0.
 # Default: 600
@@ -346,7 +346,7 @@ GlobalChat = CUSTOM
 # Trade Chat.
 # Available Options: ON, OFF, GM, GLOBAL
 # Default: ON
-TradeChat = ON
+TradeChat = GLOBAL
 
 # If you are experiencing problems with Warehouse transactions, feel free to disable them here.
 # Default: True
@@ -429,7 +429,7 @@ BBSDefault = _bbshome
 UseChatFilter = False
 
 # Replace filter words with following chars
-ChatFilterChars = ^_^
+ChatFilterChars = ***
 
 # Banchat for channels, split ";"
 # 0 = ALL (white)
