--- a/game/config/main/L2JMods.ini
+++ b/game/config/main/L2JMods.ini
@@ -91,7 +91,7 @@ OfflineTradeEnable = True
 
 # Option to enable or disable offline craft feature.
 # Enable -> true, Disable -> false
-OfflineCraftEnable = True
+OfflineCraftEnable = False
 
 # If set to True, off-line shops will be possible only peace zones.
 # Default: False
@@ -99,7 +99,7 @@ OfflineModeInPaceZone = True
 
 # If set to True, players in off-line shop mode wont take any damage, thus they cannot be killed.
 # Default: False
-OfflineModeNoDamage = False
+OfflineModeNoDamage = True
 
 # If set to True, name color will be changed then entering offline mode
 OfflineSetNameColor = True
@@ -131,7 +131,7 @@ OfflineDisconnectFinished = True
 # This option will enable core support for:
 # Mana Drug (item ID 726), using skill ID 10000.
 # Mana Potion (item ID 728), using skill ID 10001.
-EnableManaPotionSupport = False
+EnableManaPotionSupport = True
 
 
 # ---------------------------------------------------------------------------
@@ -152,7 +152,7 @@ ScreenWelcomeMessageEnable = True
 
 # Screen welcome message text to show on character login if enabled
 # ('#' for a new line, but message can have max 2 lines)
-ScreenWelcomeMessageText = Welcome to iServer
+ScreenWelcomeMessageText = Welcome to iTeam Server
 
 # Show screen welcome message for x seconds when character log in to game if enabled
 ScreenWelcomeMessageTime = 8
