--- a/game/config/main/NPC.ini
+++ b/game/config/main/NPC.ini
@@ -34,7 +34,7 @@ AltGameViewNpc = True
 MaxDriftRange = 300
 
 # Default: False
-ShowNpcLevel = False
+ShowNpcLevel = True
 
 # Show clan, alliance crests for territory NPCs without quests
 # Default: False
