Pacote de mudanças SWS

--- a/game/config/main/General.ini
+++ b/game/config/main/General.ini
@@ -98,7 +98,7 @@ GMGiveSpecialSkills = False
 # Give special aura skills for every GM
 # 7029,23238-23249,23253-23296 (Master's Blessing)
 # Default: False
-GMGiveSpecialAuraSkills = True
+GMGiveSpecialAuraSkills = False
 
 
 # ---------------------------------------------------------------------------
