Protection Power Cooldown increased Eva's templar cubic adjusted Tribunal fix attempt Entangle casting speed is faster

--- a/game/config/main/Character.ini
+++ b/game/config/main/Character.ini
@@ -26,11 +26,11 @@ MaxLvlDiffCanKeepSkillLvl = 9
 
 # Weight limit multiplier. Example: Setting this to 5 will give players 5x the normal weight limit.
 # Default: 1
-AltWeightLimit = 10
+AltWeightLimit = 30
 
 # Run speed modifier. Example: Setting this to 5 will give players +5 to their running speed.
 # Default: 0
-RunSpeedBoost = 30
+RunSpeedBoost = 0
 
 # Chance of receiving the Death Penalty debuff when killed by a mob.
 # Default: 20
@@ -57,7 +57,7 @@ CpRegenMultiplier = 100
 
 # In retail when use skills from macro have -1 second in skill reuse
 # Default: True
-RetailSkillReuse = True
+RetailSkillReuse = False
 
 # In retail when use fake death the only way to remove it is by using /sit|stand
 # if you disable this you will be able to use fake death skill again and effect will remove
@@ -169,12 +169,12 @@ SubclassStoreSkillCooltime = True
 # If False and they block:
 #	The damage is powerAtk / (shieldDef + powerDef)
 # Default: False
-AltShieldBlocks = False
+AltShieldBlocks = True
 
 # This is the percentage for perfect shield block rate.
 # DEFAULT NEEDS TO BE VERIFIED, MUST BE CHANGED HERE AND IN CONFIG.JAVA IF NOT CORRECT
 # Default: 10
-AltPerfectShieldBlockRate = 10
+AltPerfectShieldBlockRate = 0
 
 # ---------------------------------------------------------------------------
 # Class, Sub-class and skill learning options
