Ajustes nos configs.ini

--- a/game/config/sunrise/Custom.ini
+++ b/game/config/sunrise/Custom.ini
@@ -200,7 +200,7 @@ EnableCharacterControlPanel = True
 
 # Enable starting title..
 # Default: False
-EnableStartingTitle = True
+EnableStartingTitle = False
 
 # Set here the starting title
 # Default: L2Sunrise
