BUFF GOD | CONFIGURACAO TIME

--- a/game/config/main/Character.ini
+++ b/game/config/main/Character.ini
@@ -98,6 +98,7 @@ SkillDurationList = 982,7200;915,7200;274,7200;307,7200;309,7200;276,7200;825,72
 304,7200;270,7200;305,7200;269,7200;829,7200;530,7200;277,7200;275,7200;\
 826,7200;827,7200;271,7200;828,7200;830,7200;272,7200;310,7200;311,7200;529,7200;\
 1323,7200;267,7200;273,7200;365,7200;764,60;765,60;7006,7200;7029,7200;1549,7200;\
+11517,7200;11518,7200;11519,7200;11520,7200;11521,7200;11522,7200;11523,7200;11524,7200;11525,7200;11529,7200;11530,7200;11532,7200;
 
 # When this is enabled it will read the "SkillReuseList" option.
 EnableModifySkillReuse = False
@@ -555,7 +556,7 @@ DaysBeforeCreateAClan = 0
 
 # Number of days it takes to dissolve a clan.
 # Default: 7
-DaysToPassToDissolveAClan = 7
+DaysToPassToDissolveAClan = 1
 
 # Number of days before joining a new alliance when clan voluntarily leave an alliance.
 # DEFAULT NEEDS TO BE VERIFIED, MUST BE CHANGED HERE AND IN CONFIG.JAVA IF NOT CORRECT
@@ -612,7 +613,7 @@ AltPartyRange2 = 1400
 # If true, when party leader leaves party, next member in party will be the leader.
 # If false the party be will dispersed.
 # Default: False
-AltLeavePartyLeader = False
+AltLeavePartyLeader = True
 
 
 # ---------------------------------------------------------------------------
