ATUALIZAÇÃO BUFF GOD

--- a/game/data/scripts.ini
+++ b/game/data/scripts.ini
@@ -25,4 +25,4 @@ vehicles/BoatGludinRune.java
 vehicles/BoatRunePrimeval.java
 
 #Custom
-custom/AbnormalType/AbnormalType.java
+#custom/AbnormalType/AbnormalType.java
