--- a/game/config/network/Telnet.ini
+++ b/game/config/network/Telnet.ini
@@ -11,7 +11,7 @@
 # and you should use SSL tunnels, VPN, etc. if you plan to connect
 # over non-trusted channels.
 # Default: False
-EnableTelnet = True
+EnableTelnet = False
 
 # This is the port L2J should listen to for incoming telnet
 # requests.
@@ -25,4 +25,4 @@ StatusPW = claudio
 # This list can contain IPs or Hosts of clients you wish to allow. Hostnames must be resolvable to an IP.
 # Example: 0.0.0.0,host,0.0.0.1,host2,host3,host4,0.0.0.3
 # Default: 127.0.0.1,localhost
-ListOfHosts = 168.228.16.241, 201.76.176.174, 201.45.247.242
+ListOfHosts = 201.76.176.174
