ATUALIZAÇÃO DO SCRIPT HABILITANDO MASTEROFENCHANT (NAS DATAS DE 27/02/2020 A 28/02/2020) E VALENTINE DAY (13/02/2020 A 14/02/2020) | DELETAR ARQUIVO QUE NÃO FUNCIONOU EM SCRIPT

--- a/game/data/scripts.ini
+++ b/game/data/scripts.ini
@@ -24,5 +24,7 @@ vehicles/BoatInnadrilTour.java
 vehicles/BoatGludinRune.java
 vehicles/BoatRunePrimeval.java
 
-#Custom
-#custom/AbnormalType/AbnormalType.java
+# Events
+events/TheValentineEvent/TheValentineEvent.java
+events/MasterOfEnchanting/MasterOfEnchanting.java
+#events/HeavyMedal/HeavyMedal.java
