--- a/game/config/main/Character.ini
+++ b/game/config/main/Character.ini
@@ -3,7 +3,7 @@
 # ---------------------------------------------------------------------------
 # This properties file is solely for the purpose of Character modifications that directly influence them.
 # The defaults are set to be retail-like. If you modify any of these settings your server will deviate from being retail-like.
-# Warning:
+# Warning: 
 # Please take extreme caution when changing anything. Also please understand what you are changing before you do so on a live server.
 
 # ---------------------------------------------------------------------------
@@ -14,7 +14,7 @@
 # Default: True
 Delevel = False
 
-# This option enable check for all player skills for skill level.
+# This option enable check for all player skills for skill level. 
 # If player level is lower than skill learn level - 9, skill level is decreased to next possible level.
 # If there is no possible level, skill is removed from player.
 DecreaseSkillOnDelevel = True
@@ -60,7 +60,7 @@ CpRegenMultiplier = 100
 RetailSkillReuse = False
 
 # In retail when use fake death the only way to remove it is by using /sit|stand
-# if you disable this you will be able to use fake death skill again and effect will remove
+# if you disable this you will be able to use fake death skill again and effect will remove 
 # Default: True
 RetailFakeDeath = True
 
@@ -70,7 +70,7 @@ RetailFakeDeath = True
 EnableModifySkillDuration = True
 # Skill duration list
 # Format: skillid,newtime;skillid2,newtime2...
-# Example:
+# Example: 
 #	This enable 1h(3600) duration for songs, the "\"indicates new line,
 #	and is only set for formating purposes.
 #	SkillDurationList = 264,3600;265,3600;266,3600;267,3600;268,3600;\
@@ -103,7 +103,7 @@ SkillDurationList = 982,7200;915,7200;274,7200;307,7200;309,7200;276,7200;825,72
 # When this is enabled it will read the "SkillReuseList" option.
 EnableModifySkillReuse = False
 # Format: skillid,newDelayTime;skillid,newDelayTime2 (See skillDuration for examples)
-SkillReuseList =
+SkillReuseList = 
 
 # If it's true all class skills will be delivered upon level up and login.
 # Default: False
@@ -124,8 +124,8 @@ MaxBuffAmount = 20
 MaxTriggeredBuffAmount = 12
 MaxDanceAmount = 12
 
-# Allow players to cancel dances/songs via Alt+click on buff icon
-# Default: False
+# Allow players to cancel dances/songs via Alt+click on buff icon 
+# Default: False 
 DanceCancelBuff = True
 
 # This option enables/disables additional MP consume for dances and songs.
@@ -185,21 +185,21 @@ AltPerfectShieldBlockRate = 0
 # Default: False
 AllowClassMasters = True
 
-# ConfigClassMaster=1;[57(100000)];[];2;[57(1000000)];[];3;[57(10000000)],[5575(1000000)];[6622(1)]
-# 1st occupation change for 100.000 Adena (item id 57)
-# 2nd occupation change for 1.000.0000 Adena (item id 57)
-# 3rd occupation change for 10.000.0000 Adena (item id 57) and 1.000.000 Ancient Adena (item id 5575)
-# on 3rd occupation change player will be rewarded with 1 Book of Giants (item id 6622)
-# ConfigClassMaster=1;[];[];2;[];[];3;[];[]
+# ConfigClassMaster=1;[57(100000)];[];2;[57(1000000)];[];3;[57(10000000)],[5575(1000000)];[6622(1)] 
+# 1st occupation change for 100.000 Adena (item id 57) 
+# 2nd occupation change for 1.000.0000 Adena (item id 57) 
+# 3rd occupation change for 10.000.0000 Adena (item id 57) and 1.000.000 Ancient Adena (item id 5575) 
+# on 3rd occupation change player will be rewarded with 1 Book of Giants (item id 6622) 
+# ConfigClassMaster=1;[];[];2;[];[];3;[];[] 
 # 1st, 2nd, 3rd occupation change for free, without rewards.
 # ConfigClassMaster=1;[];[];2;[];[]
 # Allow only first and second change.
-ConfigClassMaster = 1;[];[];2;[];[];3;[];[]
+ConfigClassMaster = 1;[];[];2;[];[];3;[];[] 
 
 # Class Masters will allow changing to any occupation on any level inside class tree
 # For example, Dwarven Fighter will be able to advance to:
 # Artisan, Scavenger, Warsmith, Bounty Hunter, Maestro, Fortune Seeker.
-# But Warsmith will be able to change only to Maestro.
+# But Warsmith will be able to change only to Maestro. 
 # Default = False
 AllowEntireTree = False
 
@@ -207,7 +207,7 @@ AllowEntireTree = False
 # with list of the all possible variants, and can select and immediately
 # change to the new occupation, or decide to choose later (on next login).
 # Can be used with or without classic Class Masters.
-# Default = False
+# Default = False 
 AlternateClassMaster = True
 
 # Require life crystal needed to learn clan skills.
@@ -358,11 +358,21 @@ NpcTalkBlockingTime = 3
 
 # This controls the chance an item has to break if it is enchanted.
 # This chance is in %, so if you set this to 100%, enchants will always succeed.
-# DEFAULT NEEDS TO BE VERIFIED, MUST BE CHANGED HERE AND IN CONFIG.JAVA IF NOT CORRECT
-EnchantChanceElementStone = 100
-EnchantChanceElementCrystal = 25
-EnchantChanceElementJewel = 0
-EnchantChanceElementEnergy = 0
+EnchantChanceElementStoneS = 100
+EnchantChanceElementStoneS80 = 100
+EnchantChanceElementStoneS84 = 100
+
+EnchantChanceElementCrystalS = 25
+EnchantChanceElementCrystalS80 = 25
+EnchantChanceElementCrystalS84 = 25
+
+EnchantChanceElementJewelS = 0
+EnchantChanceElementJewelS80 = 0
+EnchantChanceElementJewelS84 = 0
+
+EnchantChanceElementEnergyS = 0
+EnchantChanceElementEnergyS80 = 0
+EnchantChanceElementEnergyS84= 0
 
 # List of non-enchantable items.
 # Currently apprentice, travelers weapons and Pailaka items
@@ -396,14 +406,14 @@ AugmentationMidGlowChance = 40
 AugmentationHighGlowChance = 70
 AugmentationTopGlowChance = 50
 
-# This will enable retail like weapon augmentation, but then you cant change
+# This will enable retail like weapon augmentation, but then you cant change 
 # weapon glow, base stat chance, because it wouldnt be retail like again.
 RetailLikeAugmentation = True
 
 # This will have effect ONLY when RetailLikeAugmentation is True. The sum of 4 numbers must be 100!
 # You can change probability (in %) of augment color chances - in order yellow, blue, purple, red
-# Purple and Red always give skill. Default is 55%,35%,7%,3% for all lifestone grades (ie 7+3=10%
-# for skill, not counting blue ones, that are very rare and not useful anyway).
+# Purple and Red always give skill. Default is 55%,35%,7%,3% for all lifestone grades (ie 7+3=10% 
+# for skill, not counting blue ones, that are very rare and not useful anyway). 
 RetailLikeAugmentationNoGradeChance = 55,35,7,3
 RetailLikeAugmentationMidGradeChance = 55,35,7,3
 RetailLikeAugmentationHighGradeChance = 55,35,7,3
@@ -500,7 +510,7 @@ AltGameCreation = False
 
 # Crafting Time multiplier.
 # The higher the number, the more time the crafting process takes. XP/SP reward increases with time.
-# Default: 1
+# Default: 1 
 AltGameCreationSpeed = 1
 
 # Additional crafting XP/SP rate multiplier.
@@ -641,8 +651,8 @@ StartingSP = 2147483647
 # ---------------------------------------------------------------------------
 
 # This is the maximum amount of Adena that character can have in his inventory or warehouse.
-# The maximum input amount is 9,223,372,036,854,775,807. (nine quintillion
-# two hundred twenty three quadrillion three hundred seventy two trillion thirty six billion
+# The maximum input amount is 9,223,372,036,854,775,807. (nine quintillion 
+# two hundred twenty three quadrillion three hundred seventy two trillion thirty six billion 
 # eight hundred fifty four million seven hundred seventy five thousand eight hundred seven)
 # Setting negative values (-1 or others) will result in maximum amount available.
 # Big values do not cause critical errors, although only 16 digits are visible in the inventory
@@ -693,7 +703,7 @@ MaxOffsetOnTeleport = 50
 # This option is to enable or disable the use of in game petitions.
 # The MaxPetitionsPerPlayer is the amount of petitions a player can make.
 # The MaximumPendingPetitions is the total amount of petitions in the server.
-# Note:
+# Note: 
 #	Logically, MaximumPendingPetitions must be higher then MaxPetitionsPerPlayer.
 # Default: True, 5, 25
 PetitioningAllowed = True
@@ -771,7 +781,7 @@ StoreCharUiSettings = False
 # Split them with ",". Example: announcements,announce...
 ForbiddenNames = annou,ammou,amnou,anmou,anou,amou,server,announcements,announce,gm,admin
 
-# If enabled, when character in silence (block PMs) mode sends a PM to a character, silence mode no longer blocks this character,
+# If enabled, when character in silence (block PMs) mode sends a PM to a character, silence mode no longer blocks this character, 
 # allowing both characters send each other PMs even with enabled silence mode.
 # The exclude list is cleared each time the character goes into silence mode.
 SilenceModeExclude = False
