--- a/game/config/main/Debug.ini
+++ b/game/config/main/Debug.ini
@@ -7,6 +7,17 @@
 # Default: False
 Debug = True
 
+# Default: False
+DebugItemEquip = True
+
+# This option allow to admins to check html directory
+# Default: True
+DebugHtmlDir = True
+
+# This option allow to admins to check multisell directory
+# Default: True
+DebugMultisellDir = True
+
 # Warning do not activate this in live server will cause stability issues
 # This will allow you to check how many packets server sent every x seconds
 # Default: False
