--- a/game/config/main/General.ini
+++ b/game/config/main/General.ini
@@ -2,7 +2,7 @@
 # General Server Settings
 # ---------------------------------------------------------------------------
 # The defaults are set to be retail-like. If you modify any of these settings your server will deviate from being retail-like.
-# Warning:
+# Warning: 
 # Please take extreme caution when changing anything. Also please understand what you are changing before you do so on a live server.
 
 # ---------------------------------------------------------------------------
@@ -27,19 +27,19 @@ ServerListBrackets = False
 #	Accepted Values: Normal, Relax, Test, NoLabel, Restricted, Event, Free
 # Default: Normal
 ServerListType = Relax
-
+ 
 # Displays server minimum age to the server name on character selection.
 # Notes:
 #	Accepted values: 0, 15, 18
 # Default: 0
-ServerListAge = 18
+ServerListAge = 0
 
 
 # If True, only accounts with GM access can enter the server.
 # Default: False
 ServerGMOnly = False
 
-# Enable GMs to have the glowing aura of a Hero character on login.
+# Enable GMs to have the glowing aura of a Hero character on login. 
 # Notes:
 #	GMs can do "///hero" on themselves and get this aura voluntarily.
 #	It's advised to keep this off due to graphic lag.
@@ -93,7 +93,7 @@ GMShowCritAnnouncerName = True
 # Give special skills for every GM
 # 7029,7041-7064,7088-7096,23238-23249 (Master's Blessing)
 # Default: False
-GMGiveSpecialSkills = False
+GMGiveSpecialSkills = True
 
 # Give special aura skills for every GM
 # 7029,23238-23249,23253-23296 (Master's Blessing)
@@ -297,7 +297,7 @@ AutoDeleteInvalidQuestData = True
 
 # Forces full item inventory packet to be sent for any item change.
 # Notes:
-#	This can increase network traffic
+#	This can increase network traffic 
 # Default: False
 ForceInventoryUpdate = False
 
