--- a/game/config/bosses/VanHalter.ini
+++ b/game/config/bosses/VanHalter.ini
@@ -2,10 +2,10 @@
 # Seer of Pagan Andreas Van Halter
 # ---------------------------------------------------------------------------
 # Interval time of High Priestess van Halter.
-# Value is second. Range 300-864000
+# Value is hours. Range 1-480
 FixIntervalOfHalter = 172800
 
-# Random interval. Range 300-864000.
+# Random interval. Range 1-192.
 RandomIntervalOfHalter = 86400
 
 # Delay of appearance time of High Priestess van Halter.
