--- a/game/config/network/Server.ini
+++ b/game/config/network/Server.ini
@@ -54,7 +54,8 @@ Driver = org.mariadb.jdbc.Driver
 # URL = jdbc:hsqldb:hsql://localhost/l2jgs
 # URL = jdbc:sqlserver://localhost/database = l2srgs/user = sa/password =
 # URL = jdbc:mariadb://localhost/l2jgs
-URL = jdbc:mariadb://localhost/l2jgs
+# URL = jdbc:mariadb://localhost/l2jgs
+URL = jdbc:mysql://localhost/l2jgs
 
 # Database user info (default is "root" but it's not recommended)
 Login = l2iteam
