CONFIGURAÇÃO DO MYSQL

--- a/game/config/network/Server.ini
+++ b/game/config/network/Server.ini
@@ -47,7 +47,7 @@ GameserverPort = 7777
 # Driver = org.hsqldb.jdbcDriver
 # Driver = com.microsoft.sqlserver.jdbc.SQLServerDriver
 # Driver = org.mariadb.jdbc.Driver
-Driver = org.mariadb.jdbc.Driver
+Driver = com.mysql.jdbc.Driver
 
 # Database URL
 # URL = jdbc:mysql://localhost/l2jgs (default)
