--- a/game/config/network/Server.ini
+++ b/game/config/network/Server.ini
@@ -47,15 +47,14 @@ GameserverPort = 7777
 # Driver = org.hsqldb.jdbcDriver
 # Driver = com.microsoft.sqlserver.jdbc.SQLServerDriver
 # Driver = org.mariadb.jdbc.Driver
-Driver = com.mysql.jdbc.Driver
+Driver = org.mariadb.jdbc.Driver
 
 # Database URL
 # URL = jdbc:mysql://localhost/l2jgs (default)
 # URL = jdbc:hsqldb:hsql://localhost/l2jgs
 # URL = jdbc:sqlserver://localhost/database = l2srgs/user = sa/password =
 # URL = jdbc:mariadb://localhost/l2jgs
-# URL = jdbc:mariadb://localhost/l2jgs
-URL = jdbc:mysql://localhost/l2jgs
+URL = jdbc:mariadb://localhost/l2jgs
 
 # Database user info (default is "root" but it's not recommended)
 Login = l2iteam
