CONFIGURAÇÃO DO PROTOCOLO

--- a/game/config/network/Server.ini
+++ b/game/config/network/Server.ini
@@ -94,7 +94,11 @@ DatapackRoot = .
 # Define how many players are allowed to play simultaneously on your server.
 # Default: 100
 MaximumOnlineUsers = 500
-
+# Numbers of protocol revisions that server allows to connect.
+# Delimiter is ;
+# WARNING: <u><b><font color="red">Changing the protocol revision may result in incompatible communication and many errors in game!</font></b></u>
+# Default: 267;268;271;273
+AllowedProtocolRevisions = 268
 
 # ---------------------------------------------------------------------------
 # Misc Player Settings
