REVERTENDO AS CONFIG

--- a/game/config/sunrise/votesystems/GetRewardVoteSystem.ini
+++ b/game/config/sunrise/votesystems/GetRewardVoteSystem.ini
@@ -44,10 +44,6 @@ NeededLevel = 20
 # Default: False
 EnableConsoleLog = False
 
-# Enable debug in order to see details in console when request votes
-# Default: False
-Debug = False
-
 # Will the system ignore the check of any topsite that is not reachable?
 # This means for example if for any reason l2topzone goes offline and the check for topzone is enabled
 # the system will ignore it, and continew with the next vote check.
@@ -69,10 +65,6 @@ EnableHwidCheck = False
 # Default: True 
 EnableGamebytesCheck = True
 
-# Do not touch
-# Default: https://www.gamebytes.net/
-GamebyteskLink = https://www.gamebytes.net/
-
 # If gamebytes.net check is enabled you will need to specify your server id
 # Example: If your server link is -> https://www.gamebytes.net/?a=details&u=sunrise
 # Then your id is sunrise
@@ -85,10 +77,6 @@ GamebytesApiKey = OsK3JMXc
 # Default: True 
 EnableTopCoCheck = False
 
-# Do not touch
-# Default: http://l2top.co/
-TopLink = http://l2top.co/
-
 # If top.co check is enabled you will need to specify your l2top.co server id
 # Example: If your server link is -> http://l2top.co/index.php?page=server_info&id=1311
 # Then your id is 1331
@@ -100,10 +88,6 @@ L2TopServerId = 1693
 # Default: True 
 EnableNetworkCheck = False
 
-# Do not touch
-# Default: https://l2network.eu/
-NetworkLink = https://l2network.eu/
-
 # If l2network check is enabled you will need to specify your server id
 # Example: If your server link is -> http://l2network.eu/?a=details&u=sunrise
 # Then your id is sunrise
@@ -114,10 +98,6 @@ L2NetworkServerId = sunrise
 # Will vote system check l2topzone banner if player voted?
 # Default: True 
 EnableTopZoneCheck = False
-
-# Do not touch
-# Default: http://l2topzone.com/
-TopzoneLink = http://l2topzone.com/
 
 # If l2topzone check is enabled you will need to specify your server id AND your API_KEY
 # Example: If your server link is http://l2topzone.com/lineage2/server-info/9445/sunrise.html
@@ -131,10 +111,6 @@ L2TopzoneApiKey = ac8d1445f4f45f767f911841ec52
 # Default: True 
 EnableHopzoneCheck = False
 
-# Do not touch
-# Default: https://api.hopzone.net/
-HopzoneLink = https://api.hopzone.net/
-
 # If hopzone check is enabled you will need to specify your HRA token
 # You can find your HRA token on your account panel. 
 HopzoneHraToken = cCRCGercrec4rMr
@@ -143,14 +119,9 @@ HopzoneHraToken = cCRCGercrec4rMr
 # Rewards Configuration 
 #---------------------------------------------
 
-# Here you can set the rewards for a successful voter
+# Here you can set the rewards for a sucesfull voter
 # It is Working like: itemid1,amount1,itemchance1;itemid2,amount2,itemchance2;
 # The above example will give 100000 amount of 57 id with 100% chance AND 100 amount of 3483 id with 85% chance
 # Example: 57,100000,100;3483,100,85
 Rewards = 57,144740,100;3483,100,85
 
-# Set days of premium if successful vote is made
-# leave it 0 if you want this feature disabled
-# if voter is already premium this will be ignored even if is enabled
-# Default: 0 premium time in days
-PremiumRewardTime = 0
