RECEBER BUFF NO ADM

--- a/game/config/main/General.ini
+++ b/game/config/main/General.ini
@@ -93,7 +93,7 @@ GMShowCritAnnouncerName = True
 # Give special skills for every GM
 # 7029,7041-7064,7088-7096,23238-23249 (Master's Blessing)
 # Default: False
-GMGiveSpecialSkills = False
+GMGiveSpecialSkills = True
 
 # Give special aura skills for every GM
 # 7029,23238-23249,23253-23296 (Master's Blessing)
