REVERTENDO AO COMMIT def13e4

--- a/game/config/main/General.ini
+++ b/game/config/main/General.ini
@@ -93,7 +93,7 @@ GMShowCritAnnouncerName = True
 # Give special skills for every GM
 # 7029,7041-7064,7088-7096,23238-23249 (Master's Blessing)
 # Default: False
-GMGiveSpecialSkills = True
+GMGiveSpecialSkills = False
 
 # Give special aura skills for every GM
 # 7029,23238-23249,23253-23296 (Master's Blessing)
@@ -119,7 +119,7 @@ GameGuardProhibitAction = False
 
 #Logging settings. The following four settings, while enabled, will increase writing to your hard drive(s) considerably. Depending on the size of your server, the amount of players, and other factors, you may suffer a noticable performance hit.
 # Default: False
-LogChat = True
+LogChat = False
 
 # Default: False
 LogAutoAnnouncements = True
@@ -157,7 +157,7 @@ SkillCheckRemove = True
 
 # Check also GM characters (only if SkillCheckEnable = True)
 # Default: True
-SkillCheckGM = False
+SkillCheckGM = True
 
 
 # ---------------------------------------------------------------------------
@@ -341,12 +341,12 @@ PeaceZoneMode = 0
 # Global Chat.
 # Available Options: ON, OFF, GM, GLOBAL, CUSTOM
 # Default: ON
-GlobalChat = ON
+GlobalChat = CUSTOM
 
 # Trade Chat.
 # Available Options: ON, OFF, GM, GLOBAL
 # Default: ON
-TradeChat = ON
+TradeChat = GLOBAL
 
 # If you are experiencing problems with Warehouse transactions, feel free to disable them here.
 # Default: True
@@ -415,7 +415,7 @@ AllowPetWalkers = True
 
 # Show "data/html/servnews.htm" when a character enters world.
 # Default: False
-ShowServerNews = False
+ShowServerNews = True
 
 # Enable or disable community board!
 # Default: True
