--- a/game/config/sunrise/votesystems/GetRewardVoteSystem.ini
+++ b/game/config/sunrise/votesystems/GetRewardVoteSystem.ini
@@ -2,15 +2,15 @@
 # Vote System Information
 #---------------------------------------------
 
-#This vote reward system works like the well known .getreward command which is used by populated servers but includes a few improvements.
+This vote reward system works like the well known .getreward command which is used by populated servers but includes a few improvements.
 
-#There's voting panel, with basic information about the voting process and the rewards
-#It's possible to give unlimited rewards and each of them to have its own chance.
-#It can now check up to 5 topsite's using API connections. API connections are more safe, not CPU consuming and returns in real time if the player voted.
+There's voting panel, with basic information about the voting process and the rewards
+It's possible to give unlimited rewards and each of them to have its own chance.
+It can now check up to 5 topsite's using API connections. API connections are more safe, not CPU consuming and returns in real time if the player voted.
 
-#The main advantage of this system is that players will not known which topsites we check to validate that they really voted.
-#This means we can add as many voting banners as we like and in addition we will only check >5 of them.
-#Our vote reward can check if a player voted on gamebytes.net, topzone , hopzone, l2network and l2top.co 
+The main advantage of this system is that players will not known which topsites we check to validate that they really voted.
+This means we can add as many voting banners as we like and in addition we will only check >5 of them.
+Our vote reward can check if a player voted on gamebytes.net, topzone , hopzone, l2network and l2top.co 
 
 #---------------------------------------------
 # General Configuration 
