--- a/login/config/network/LoginServer.ini
+++ b/login/config/network/LoginServer.ini
@@ -45,11 +45,11 @@ LoginTryBeforeBan = 5
 
 # Time you won't be able to login back again after LoginTryBeforeBan tries to login.
 # Default: 900 (15 minutes)
-LoginBlockAfterBan = 300
+LoginBlockAfterBan = 900
 
 # If set to True any GameServer can register on your login's free slots
 # Default: True
-AcceptNewGameServer = False
+AcceptNewGameServer = True
 
 # Flood Protection. All values are in MILISECONDS.
 # Default: True
