ATUALIZAÇÃO DE CONFIG

--- a/game/config/sunrise/Leaderboard.ini
+++ b/game/config/sunrise/Leaderboard.ini
@@ -42,7 +42,7 @@ RankFishermanRewardCount = 1000
 # ---------------------------------------------------------------------------
 # Craft Manager configs
 # Required: CustomNpcTable = True
-RankCraftEnabled = True
+RankCraftEnabled = False
 # Interval in minutes
 RankCraftInterval = 120
 # Reward ID
