CORREÇÃO DO DEBUG.INI

--- a/game/config/main/Debug.ini
+++ b/game/config/main/Debug.ini
@@ -5,18 +5,18 @@
 # These settings are for debugging servers ONLY. They are not meant for LIVE servers.
 
 # Default: False
-Debug = True
+Debug = False
 
 # Default: False
-DebugItemEquip = True
+DebugItemEquip = False
 
 # This option allow to admins to check html directory
-# Default: True
-DebugHtmlDir = True
+# Default: False
+DebugHtmlDir = False
 
 # This option allow to admins to check multisell directory
-# Default: True
-DebugMultisellDir = True
+# Default: False
+DebugMultisellDir = False
 
 # Warning do not activate this in live server will cause stability issues
 # This will allow you to check how many packets server sent every x seconds
@@ -29,38 +29,38 @@ DebugPacketsName = False
 # Default: 5
 DebugPacketInterval = 5
 
-# Set true if you want to see player skill logs
+# Set False if you want to see player skill logs
 # Default : False
-DebugPlayersSkills = True
+DebugPlayersSkills = False
 
-# Set true if want to see players possible tries to dupe items
+# Set False if want to see players possible tries to dupe items
 # Default: False
-DebugPossibleItemsDupe = True
+DebugPossibleItemsDupe = False
 
 # Instances debugging
 # Default: False
-InstanceDebug = True
+InstanceDebug = False
 
 # Html action cache debugging
 # Default: False
-HtmlActionCacheDebug = True
+HtmlActionCacheDebug = False
 
 # Default: False
-DebugScriptsNotifies = True
+DebugScriptsNotifies = False
 
 # Show skills while loading them.
 # Default: False
-DebugSkillParsing = True
+DebugSkillParsing = False
 
 # Default: False
-DebugSkillDuration = True
+DebugSkillDuration = False
 
 # This will log if a player lost a variable from character_quests table
 # Default: False
-DebugQuestLostVariables = True
+DebugQuestLostVariables = False
 
 # Default: False
-DebugMultipleRegistrationsOfNpcs = FalseTrue
+DebugMultipleRegistrationsOfNpcs = False
 
 # Packet handler debug output
 # Default: False
@@ -71,20 +71,20 @@ Developer = False
 
 # Don't load Handlers
 # Default: False
-AltDevNoHandlers = True
+AltDevNoHandlers = False
 
 # Don't load quests.
 # Default: False
-AltDevNoQuests = True
+AltDevNoQuests = False
 
 # Don't load spawntable.
 # Default: False
-AltDevNoSpawns = True
+AltDevNoSpawns = False
 
 # Show quests while loading them.
 # Default: False
-AltDevShowQuestsLoadInLogs = True
+AltDevShowQuestsLoadInLogs = False
 
 # Show scripts while loading them.
 # Default: False
-AltDevShowScriptsLoadInLogs = True
+AltDevShowScriptsLoadInLogs = False
