CONFIGURAÇÃO DO DEBUG E TELNET

--- a/game/config/main/Debug.ini
+++ b/game/config/main/Debug.ini
@@ -4,87 +4,87 @@
 # Do not touch these if you do not know what you are doing.
 # These settings are for debugging servers ONLY. They are not meant for LIVE servers.
 
-# Default: False
-Debug = False
+# Default: True
+Debug = True
 
-# Default: False
-DebugItemEquip = False
+# Default: True
+DebugItemEquip = True
 
 # This option allow to admins to check html directory
-# Default: False
-DebugHtmlDir = False
+# Default: True
+DebugHtmlDir = True
 
 # This option allow to admins to check multisell directory
-# Default: False
-DebugMultisellDir = False
+# Default: True
+DebugMultisellDir = True
 
 # Warning do not activate this in live server will cause stability issues
 # This will allow you to check how many packets server sent every x seconds
-# Default: False
-DebugPacketsCount = False
+# Default: True
+DebugPacketsCount = True
 # This will allow you to check packets sent every x seconds
-# Default: False
-DebugPacketsName = False
+# Default: True
+DebugPacketsName = True
 # Set here refresh time in seconds
 # Default: 5
 DebugPacketInterval = 5
 
-# Set False if you want to see player skill logs
-# Default : False
-DebugPlayersSkills = False
+# Set True if you want to see player skill logs
+# Default : True
+DebugPlayersSkills = True
 
-# Set False if want to see players possible tries to dupe items
-# Default: False
-DebugPossibleItemsDupe = False
+# Set True if want to see players possible tries to dupe items
+# Default: True
+DebugPossibleItemsDupe = True
 
 # Instances debugging
-# Default: False
-InstanceDebug = False
+# Default: True
+InstanceDebug = True
 
 # Html action cache debugging
-# Default: False
-HtmlActionCacheDebug = False
+# Default: True
+HtmlActionCacheDebug = True
 
-# Default: False
-DebugScriptsNotifies = False
+# Default: True
+DebugScriptsNotifies = True
 
 # Show skills while loading them.
-# Default: False
-DebugSkillParsing = False
+# Default: True
+DebugSkillParsing = True
 
-# Default: False
-DebugSkillDuration = False
+# Default: True
+DebugSkillDuration = True
 
 # This will log if a player lost a variable from character_quests table
-# Default: False
-DebugQuestLostVariables = False
+# Default: True
+DebugQuestLostVariables = True
 
-# Default: False
-DebugMultipleRegistrationsOfNpcs = False
+# Default: True
+DebugMultipleRegistrationsOfNpcs = True
 
 # Packet handler debug output
-# Default: False
-PacketHandlerDebug = False
+# Default: True
+PacketHandlerDebug = True
 
-# Default: False
-Developer = False
+# Default: True
+Developer = True
 
 # Don't load Handlers
-# Default: False
-AltDevNoHandlers = False
+# Default: True
+AltDevNoHandlers = True
 
 # Don't load quests.
-# Default: False
-AltDevNoQuests = False
+# Default: True
+AltDevNoQuests = True
 
 # Don't load spawntable.
-# Default: False
-AltDevNoSpawns = False
+# Default: True
+AltDevNoSpawns = True
 
 # Show quests while loading them.
-# Default: False
-AltDevShowQuestsLoadInLogs = False
+# Default: True
+AltDevShowQuestsLoadInLogs = True
 
 # Show scripts while loading them.
-# Default: False
-AltDevShowScriptsLoadInLogs = False
+# Default: True
+AltDevShowScriptsLoadInLogs = True
