--- a/game/config/main/Debug.ini
+++ b/game/config/main/Debug.ini
@@ -4,87 +4,87 @@
 # Do not touch these if you do not know what you are doing.
 # These settings are for debugging servers ONLY. They are not meant for LIVE servers.
 
-# Default: True
-Debug = True
+# Default: False
+Debug = False
 
-# Default: True
-DebugItemEquip = True
+# Default: False
+DebugItemEquip = False
 
 # This option allow to admins to check html directory
-# Default: True
-DebugHtmlDir = True
+# Default: False
+DebugHtmlDir = False
 
 # This option allow to admins to check multisell directory
-# Default: True
-DebugMultisellDir = True
+# Default: False
+DebugMultisellDir = False
 
 # Warning do not activate this in live server will cause stability issues
 # This will allow you to check how many packets server sent every x seconds
-# Default: True
-DebugPacketsCount = True
+# Default: False
+DebugPacketsCount = False
 # This will allow you to check packets sent every x seconds
-# Default: True
-DebugPacketsName = True
+# Default: False
+DebugPacketsName = False
 # Set here refresh time in seconds
 # Default: 5
 DebugPacketInterval = 5
 
-# Set True if you want to see player skill logs
-# Default : True
-DebugPlayersSkills = True
+# Set False if you want to see player skill logs
+# Default : False
+DebugPlayersSkills = False
 
-# Set True if want to see players possible tries to dupe items
-# Default: True
-DebugPossibleItemsDupe = True
+# Set False if want to see players possible tries to dupe items
+# Default: False
+DebugPossibleItemsDupe = False
 
 # Instances debugging
-# Default: True
-InstanceDebug = True
+# Default: False
+InstanceDebug = False
 
 # Html action cache debugging
-# Default: True
-HtmlActionCacheDebug = True
+# Default: False
+HtmlActionCacheDebug = False
 
-# Default: True
-DebugScriptsNotifies = True
+# Default: False
+DebugScriptsNotifies = False
 
 # Show skills while loading them.
-# Default: True
-DebugSkillParsing = True
+# Default: False
+DebugSkillParsing = False
 
-# Default: True
-DebugSkillDuration = True
+# Default: False
+DebugSkillDuration = False
 
 # This will log if a player lost a variable from character_quests table
-# Default: True
-DebugQuestLostVariables = True
+# Default: False
+DebugQuestLostVariables = False
 
-# Default: True
-DebugMultipleRegistrationsOfNpcs = True
+# Default: False
+DebugMultipleRegistrationsOfNpcs = False
 
 # Packet handler debug output
-# Default: True
-PacketHandlerDebug = True
+# Default: False
+PacketHandlerDebug = False
 
-# Default: True
-Developer = True
+# Default: False
+Developer = False
 
 # Don't load Handlers
-# Default: True
-AltDevNoHandlers = True
+# Default: False
+AltDevNoHandlers = False
 
 # Don't load quests.
-# Default: True
-AltDevNoQuests = True
+# Default: False
+AltDevNoQuests = False
 
 # Don't load spawntable.
-# Default: True
-AltDevNoSpawns = True
+# Default: False
+AltDevNoSpawns = False
 
 # Show quests while loading them.
-# Default: True
-AltDevShowQuestsLoadInLogs = True
+# Default: False
+AltDevShowQuestsLoadInLogs = False
 
 # Show scripts while loading them.
-# Default: True
-AltDevShowScriptsLoadInLogs = True
+# Default: False
+AltDevShowScriptsLoadInLogs = False
