--- a/game/config/main/NPC.ini
+++ b/game/config/main/NPC.ini
@@ -149,15 +149,15 @@ RaidMpRegenMultiplier = 100
 # Example: A setting of 10 will cause defense to be 90% lower than normal, 
 # while 110 will cause defense to be 10% higher than normal.
 # Default: 100, 100
-#RaidPDefenceMultiplier = 60
-#RaidMDefenceMultiplier = 60
+RaidPDefenceMultiplier = 60
+RaidMDefenceMultiplier = 60
 
 # Percent of physical and magical attack for raid bosses.
 # Example: A setting of 10 will cause attack to be 90% lower than normal, 
 # while 110 will cause attack to be 10% higher than normal.
 # Default: 100, 100
-#RaidPAttackMultiplier = 25
-#RaidMAttackMultiplier = 25
+RaidPAttackMultiplier = 25
+RaidMAttackMultiplier = 25
 
 # Configure Minimum and Maximum time multiplier between raid boss re-spawn.
 # By default 12Hours*1.0 for Minimum Time and 24Hours*1.0 for Maximum Time.
